<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".circular_countdown.DemoCircularCountDownActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBoxIsTimerTextShown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/isTimerTextShown"
            android:checked="true"
            app:layout_constraintEnd_toStartOf="@+id/rgTimerTextFormat"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxIsTimerTextBold" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.38" />

        <com.androchef.happytimer.countdowntimer.CircularCountDownView
            android:id="@+id/circularCountDownView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:stroke_background_thickness="31dp"
            app:stroke_foreground_color="@color/colorLightBlue"
            app:stroke_foreground_thickness="40dp"
            app:timer_text_format="HOUR_MINUTE_SECOND"
            app:timer_text_size="20sp"
            app:timer_type="COUNT_UP">

        </com.androchef.happytimer.countdowntimer.CircularCountDownView>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_seconds_to_show"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:text="90"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnInitTimer"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxIsTimerTextShown" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMinusThicknessForeground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_thickness_foreground"
            app:layout_constraintBottom_toBottomOf="@+id/btnMinusTimerTextSize"
            app:layout_constraintEnd_toStartOf="@+id/btnPlusTimerTextSize"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnMinusTimerTextSize"
            app:layout_constraintTop_toTopOf="@+id/btnMinusTimerTextSize" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPlusThicknessForeground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_thickness_foreground"
            app:layout_constraintBottom_toBottomOf="@+id/btnPlusThicknessBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnMinusThicknessBackground"
            app:layout_constraintTop_toTopOf="@+id/btnPlusThicknessBackground" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMinusThicknessBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_thickness_background"
            app:layout_constraintBottom_toBottomOf="@+id/btnPlusThicknessBackground"
            app:layout_constraintEnd_toStartOf="@+id/btnPlusThicknessForeground"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnPlusThicknessBackground"
            app:layout_constraintTop_toTopOf="@+id/btnPlusThicknessBackground" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPlusThicknessBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/plus_thickness_background"
            app:layout_constraintEnd_toStartOf="@+id/btnMinusThicknessBackground"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnResetTimer" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChooseColorBackgroundStroke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_background_stroke"
            app:layout_constraintBottom_toBottomOf="@+id/btnResetTimer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnChooseColorForegroundStroke"
            app:layout_constraintTop_toTopOf="@+id/btnResetTimer" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBoxIsTimerTextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/timertextisbold"
            app:layout_constraintEnd_toStartOf="@+id/rgTimerType"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnMinusTimerTextSize" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChooseColorForegroundStroke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_foreground_stroke"
            app:layout_constraintEnd_toStartOf="@+id/btnChooseColorBackgroundStroke"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnChooseColorTimerText"
            app:layout_constraintTop_toTopOf="@+id/btnResetTimer" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChooseColorTimerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_timer_text_color"
            app:layout_constraintBottom_toBottomOf="@+id/btnResetTimer"
            app:layout_constraintEnd_toStartOf="@+id/btnChooseColorForegroundStroke"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnResetTimer"
            app:layout_constraintTop_toTopOf="@+id/btnResetTimer" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPlusTimerTextSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_timer_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/btnMinusTimerTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnMinusThicknessForeground"
            app:layout_constraintTop_toTopOf="@+id/btnMinusTimerTextSize" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMinusTimerTextSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/minus_timer_text_size"
            app:layout_constraintEnd_toStartOf="@+id/btnMinusThicknessForeground"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPlusThicknessBackground" />

        <RadioGroup
            android:id="@+id/rgTimerTextFormat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/checkBoxIsTimerTextShown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/checkBoxIsTimerTextShown"
            app:layout_constraintTop_toTopOf="@+id/checkBoxIsTimerTextShown">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/timerTextFormatHMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/h_m_s"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="176dp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/timerTextFormatMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_s"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="176dp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/timerTextFormatS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="176dp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/rgTimerType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/checkBoxIsTimerTextBold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/checkBoxIsTimerTextBold"
            app:layout_constraintTop_toTopOf="@+id/checkBoxIsTimerTextBold"
            app:layout_constraintVertical_bias="0.0">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/timerTypeCountDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_down" />


            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/timerTypeCountUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_up" />

        </RadioGroup>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnStartTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            app:layout_constraintEnd_toStartOf="@+id/btnPauseTimer"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnStopTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            app:layout_constraintBottom_toBottomOf="@+id/btnStartTimer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnResumeTimer"
            app:layout_constraintTop_toTopOf="@+id/btnStartTimer" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnResumeTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resume"
            app:layout_constraintBottom_toBottomOf="@+id/btnStartTimer"
            app:layout_constraintEnd_toStartOf="@+id/btnStopTimer"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnPauseTimer"
            app:layout_constraintTop_toTopOf="@+id/btnStartTimer" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnResetTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/reset"
            app:layout_constraintEnd_toStartOf="@+id/btnChooseColorTimerText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnStartTimer" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPauseTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            app:layout_constraintBottom_toBottomOf="@+id/btnStartTimer"
            app:layout_constraintEnd_toStartOf="@+id/btnResumeTimer"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnStartTimer"
            app:layout_constraintTop_toTopOf="@+id/btnStartTimer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCurrentTimerStateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_state"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvCurrentTimerCompletedSecondsLabel"
            app:layout_constraintTop_toTopOf="@+id/tvCurrentTimerCompletedSecondsLabel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCurrentTimerCompletedSecondsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed_seconds"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvCurrentTimerStateLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvCurrentTimerTotalSecondsLabel"
            app:layout_constraintTop_toTopOf="@+id/tvCurrentTimerTotalSecondsLabel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCurrentTimerTotalSecondsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/total_seconds"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvCurrentTimerCompletedSecondsLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTime" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCurrentTimerCompletedSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_time"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/tvCurrentTimerCompletedSecondsLabel"
            app:layout_constraintStart_toStartOf="@+id/tvCurrentTimerCompletedSecondsLabel"
            app:layout_constraintTop_toTopOf="@+id/tvCurrentTimerTotalSeconds" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCurrentTimerTotalSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/placeholder_time"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvCurrentTimerTotalSecondsLabel"
            app:layout_constraintStart_toStartOf="@+id/tvCurrentTimerTotalSecondsLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentTimerTotalSecondsLabel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCurrentTimerState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_state"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/tvCurrentTimerStateLabel"
            app:layout_constraintStart_toStartOf="@+id/tvCurrentTimerStateLabel"
            app:layout_constraintTop_toTopOf="@+id/tvCurrentTimerCompletedSeconds" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnInitTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_timer"
            app:layout_constraintBottom_toBottomOf="@+id/edtTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/edtTime"
            app:layout_constraintTop_toTopOf="@+id/edtTime" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>