<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/marginLarge"
    tools:context=".HomeActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCircular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/circulartimer"
        android:layout_gravity="center"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDynamic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dynamic"
        android:layout_marginTop="@dimen/marginLarge"
        android:layout_gravity="center"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNormalCountDown"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"
        android:text="@string/normalcountdowntextview"
        />

</LinearLayout>